# seismic-classifier

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ACCOMPLISHMENTS.md  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  Makefile  README.md  README_NEW.md  README_OLD.md  STATUS.md  STATUS_COMPLETE.md  VIRTUAL_ENV_SETUP.md  docker-compose.dev.yml  docker-compose.yml  dockerignore  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.copilot/: config.json  prompts.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  CONTRIBUTING.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  docker-dev-ci.yml  docs.yml  release.yml
config/: config.yaml
data/cache/: .gitkeep
data/models/: .gitkeep
data/processed/: .gitkeep
data/raw/: .gitkeep
data/results/: .gitkeep
docker/: dev-backend.Dockerfile  dev-frontend.Dockerfile  dev-tools.Dockerfile
docker/scripts/: dev-entrypoint.sh  frontend-entrypoint.sh  tools-entrypoint.sh
docs/: DOCKER_DEVELOPMENT.md  DOCKER_DEVELOPMENT_COMPLETE.md  IMPLEMENTATION_PROGRESS.md  PROJECT_PLAN.md  VIRTUAL_ENVIRONMENT.md  WORKFLOW.md
gui-app/: README.md  index.html  launch.sh  package.json  setup.sh  start.sh  tailwind.config.js
gui-app/src/: App.tsx  index.css
gui-app/src/components/charts/: SeismicCharts.tsx
gui-app/src/components/layout/: Header.tsx  Sidebar.tsx
gui-app/src/components/modals/: FileUploadModal.tsx  NotificationsModal.tsx  SettingsModal.tsx  UserMenuModal.tsx
gui-app/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  Modal.tsx
gui-app/src/pages/: Analysis.tsx  Dashboard.tsx  Monitoring.tsx
gui-app/src/services/: websocketService.ts
gui-app/src/store/: appStore.ts
infrastructure/aws/: main.tf  variables.tf
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/prometheus/: prometheus.yml
notebooks/: advanced_analytics_demo.ipynb  complete_system_demo.ipynb  implementation_status.ipynb  seismic_classifier_demo.ipynb
scripts/: activate_venv.sh  make_executable.sh  setup_venv.sh  verify_setup.sh
src/: __init__.py
src/data_pipeline/: __init__.py
src/feature_engineering/: __init__.py
src/models/: __init__.py
src/seismic_classifier/: __init__.py
src/seismic_classifier/advanced_analytics/: README.md  __init__.py  confidence_analysis.py  event_detection.py  location_determination.py  magnitude_estimation.py  parallel.py
src/seismic_classifier/api/: main.py  models.py  server.py
src/seismic_classifier/config/: settings.py
src/seismic_classifier/data_pipeline/: __init__.py  database.py  error_handling.py  iris_client.py  usgs_client.py  validators.py
src/seismic_classifier/feature_engineering/: __init__.py  feature_extraction.py  signal_processing.py
src/seismic_classifier/ml_models/: __init__.py  classification.py
src/seismic_classifier/utils/: logger.py
tests/: test_advanced_analytics.py  test_api_extended.py  test_api_smoke.py  test_parallel.py
